--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@iconscout/react-unicons": "^2.0.2",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.3.1",
     "luxon": "^3.4.0",
@@ -40,8 +39,10 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^14.0.0",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.28",
+    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.3.3"
   }
 }
